# drl-trading

./: .coverage  .coveragerc  .dmypy.json  .env.example  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.ci  README.md  add_feature.py  docker-compose.inference.yml  docker-compose.production.yml  docker-compose.training.yml  environment.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.bak  requirements_used.txt  setup.cfg  setup.py  sync.sh
drl-trading-adapter/: README.md  pyproject.toml
drl-trading-adapter/src/drl_trading_adapter/: __init__.py
drl-trading-adapter/src/drl_trading_adapter/infrastructure/: __init__.py
drl-trading-adapter/test/adapter/feature_store/: feature_store_fetch_repository_test.py
drl-trading-adapter/test/resources/test/: feature_store.yaml
drl-trading-adapter/test/unit/feature_config/: feature_config_reader_simple_test.py  feature_config_reader_test.py
drl-trading-adapter/tests/integration/: conftest.py
drl-trading-common/: .dmypy.json  README.md  demo_messaging_modes.py  pyproject.toml
drl-trading-common/config/: application-local.yaml
drl-trading-common/src/drl_trading_common/: __init__.py
drl-trading-common/src/drl_trading_common/adapter/: __init__.py
drl-trading-common/src/drl_trading_common/application/: dask_config_mapper.py
drl-trading-common/src/drl_trading_common/base/: __init__.py  base_application_config.py  base_feature.py  base_indicator.py  base_parameter_set_config.py  base_schema.py  base_strategy_module.py  base_trading_env.py  (+3 more)
drl-trading-common/tests/: conftest.py
drl-trading-core/: .gitlab-ci.yml  Dockerfile  LICENSE.txt  pyproject.toml
drl-trading-core/.github/: copilot-instructions.md
drl-trading-core/.github/instructions/: general-coding.instructions.md
drl-trading-core/.prompts/: pipeline.md  todo.txt
drl-trading-core/.prompts/features/: scratch.md
drl-trading-core/config/cicd/: feature_store.yaml
drl-trading-core/config/dev/: feature_store.yaml
drl-trading-core/config/prod/: feature_store.yaml
drl-trading-core/scripts/: add_feature.py  clean_data.py  example_sb3.py  train_model.py  visualize_service.py
drl-trading-core/src/drl_trading_core/: __init__.py  bootstrap.py  core_engine.py
drl-trading-core/tests/: conftest.py
drl-trading-core/tests/integration/: conftest.py  container_test.py  csv_data_import_service_test.py  example_feast_integration_test.py  feature_aggregator_test.py  preprocessing_test.py
drl-trading-core/tests/resources/: applicationConfig-test.json  feature_store.yaml  test_H4.csv  test_ohlc_dataset.csv
drl-trading-execution/: .env  .env.example  README.md  main.py  pyproject.toml
drl-trading-execution/config/: application-cicd.yaml  application-local.yaml  application-prod.yaml  application.yaml
drl-trading-execution/docker/: Dockerfile
drl-trading-execution/src/drl_trading_execution/: ExecutionModule.py  __init__.py  bootstrap.py
drl-trading-impl-example/: main.py  pyproject.toml
drl-trading-impl-example/config/: applicationConfig.json
drl-trading-impl-example/src/drl_trading_impl/: custom_env.py
drl-trading-inference/: .env.example  main.py  pyproject.toml
drl-trading-inference/config/: application-cicd.yaml  application-local.yaml  application-prod.yaml  application.yaml  inference.development.yaml  inference.production.yaml
drl-trading-inference/docker/: Dockerfile
drl-trading-inference/src/drl_trading_inference/: InferenceModule.py  __init__.py  bootstrap.py
drl-trading-ingest/: .env  .env.example  MIGRATION_GUIDE.md  README.md  T005-IMPLEMENTATION-REVIEW.md  alembic.ini  main.py  pyproject.toml
drl-trading-ingest/config/: application-cicd.yaml  application-local.yaml  application-prod.yaml  application.yaml
drl-trading-ingest/docker/: Dockerfile
drl-trading-ingest/migrations/: env.py
drl-trading-ingest/migrations/versions/: 001_initial_tables.py
drl-trading-ingest/specs/: openapi.yaml
drl-trading-preprocess/: .env.example  .importlinter  LOAD_TEST_RESULTS.md  main.py  pyproject.toml
drl-trading-preprocess/config/: application-cicd.yaml  application-local.yaml  application-prod.yaml  application.yaml
drl-trading-preprocess/config/local/: feature_store.yaml
drl-trading-preprocess/docker/: .dockerignore  Dockerfile
drl-trading-preprocess/src/drl_trading_preprocess/: PreprocessModule.py  bootstrap.py
drl-trading-preprocess/tests/: comprehensive_load_test.py  conftest.py  simple_load_test.py
drl-trading-preprocess/tests/builders/: __init__.py  request_builder.py
drl-trading-preprocess/tests/e2e/: README.md  conftest.py  preprocess_service_e2e_test.py  production_backfill_workflow_e2e_test.py  production_inference_workflow_e2e_test.py  production_training_workflow_e2e_test.py  test_production_backfill_workflow.py
drl-trading-preprocess/tests/integration/: conftest.py
drl-trading-preprocess/tests/load_test/: LOAD_TESTS.md  comprehensive_load_test.py  simple_load_test.py
drl-trading-strategy-example/: app_config.json  app_config.yaml  main.py  pyproject.toml
drl-trading-strategy-example/config/: applicationConfig.json  applicationConfig.yaml  service.yaml
drl-trading-strategy-example/experiments/: talipp_experiment.py
drl-trading-strategy-example/src/drl_trading_strategy/: __init__.py  custom_env.py
drl-trading-strategy-example/src/drl_trading_strategy_example/: __init__.py
drl-trading-strategy-example/tests/benchmarks/: QUICKSTART.md  README.md  RESULTS.md  __init__.py  conftest.py  feature_persistence_benchmark_test.py
drl-trading-training/: .env.example  README.md  main.py  pyproject.toml
drl-trading-training/config/: application-cicd.yaml  application-local.yaml  application-prod.yaml  application.yaml
drl-trading-training/docker/: Dockerfile
drl-trading-training/scripts/: generate-and-install-clients.sh
drl-trading-training/specs/: openapi.yaml
drl-trading-training/src/drl_trading_training/: TrainingModule.py  __init__.py  bootstrap.py  training_app.py
(+1263 files in other folders)
