[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
]
ignore = ["E501"]  # Line length is handled by black

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "F403"]
"tests/**/*" = ["F841"]  # Allow unused variables in tests
"src/ai_trading/preprocess/feature/todo_*.py" = ["B019"]  # Allow lru_cache in development files

[tool.ruff.isort]
known-first-party = ["ai_trading"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "pytest.*"]
ignore_missing_imports = true
