[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "ai_trading"
description = "AI-powered trading system with reinforcement learning capabilities"
authors = [
    {name = "sonntagnico", email = "nico-tor@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dynamic = ["version"]
dependencies = [
    # Core dependencies for runtime
    "numpy",
    "pandas",
    "pandas_ta",
    "gymnasium",
    "stable_baselines3",
    "yfinance",
    # Feature storage and management
    "feast",
    # API and services
    "click",
    # Dependency injection framework
    "dependency_injector",
]

[project.urls]
Documentation = "https://pyscaffold.org/"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
]
dev = [
    "mypy",
    "ruff",
    "ipython",
]

# Keep existing setuptools_scm configuration
[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
]
ignore = ["E501"]  # Line length is handled by black

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "F403"]
"tests/**/*" = ["F841"]  # Allow unused variables in tests
"src/ai_trading/preprocess/feature/todo_*.py" = ["B019"]  # Allow lru_cache in development files

[tool.ruff.lint.isort]
known-first-party = ["ai_trading"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
# Cache improvements from mypy.ini
cache_dir = ".mypy_cache"
incremental = true
follow_imports = "silent"
# Exclude all test files in the tests directory and files including "TODO" in filename
exclude = [
    "^tests/**/*.py",
    "(?i).*todo.*\\.py$"
]

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "pytest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/it",
    "tests/benchmarks"
]
python_files = "*_test.py *_it.py"
python_classes = "Test*"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
addopts = [
    # "--verbose",
    "-ra",
    "-m not slow"
    # "--cov=ai_trading",
    # "--cov-report=term-missing"
]

# Add tox configuration
[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.24
envlist = default
isolated_build = True

[testenv]
description = Invoke pytest to run automated tests
setenv =
    TOXINIDIR = {toxinidir}
passenv =
    HOME
    SETUPTOOLS_*
extras =
    testing
commands =
    pytest {posargs}

[testenv:{build,clean}]
description =
    build: Build the package in isolation according to PEP517, see https://github.com/pypa/build
    clean: Remove old distribution files and temporary build artifacts (./build and ./dist)
skip_install = True
changedir = {toxinidir}
deps =
    build: build[virtualenv]
passenv =
    SETUPTOOLS_*
commands =
    clean: python -c 'import shutil; [shutil.rmtree(p, True) for p in ("build", "dist")]'
    clean: python -c 'import pathlib, shutil; [shutil.rmtree(p, True) for p in pathlib.Path("src").glob("*.egg-info")]'
    build: python -m build {posargs}

[testenv:publish]
description =
    Publish the package you have been developing to a package index server.
    By default, it uses testpypi. If you really want to publish your package
    to be publicly accessible in PyPI, use the `-- --repository pypi` option.
skip_install = True
changedir = {toxinidir}
passenv =
    TWINE_USERNAME
    TWINE_PASSWORD
    TWINE_REPOSITORY
    TWINE_REPOSITORY_URL
deps = twine
commands =
    python -m twine check dist/*
    python -m twine upload {posargs:--repository {env:TWINE_REPOSITORY:testpypi}} dist/*
"""

# Package discovery configuration
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

# Coverage configuration (migrated from .coveragerc)
[tool.coverage.run]
source = ["ai_trading"]
branch = true
omit = [
    "*/tests/*",
    "*/tests/it/fixtures.py",
    "*/setup.py",
    "*/bootstrap.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "if False:",
]
