## DRL Trading Adapter Package
## Provides external adapter implementations (e.g., Feast feature store) decoupled from core domain.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-trading-adapter"
version = "0.1.0"
description = "Adapter implementations (Feast feature store, offline repositories, feature store repositories) for DRL Trading framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "sonntagnico", email = "nico-tor@hotmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Runtime dependencies ONLY. Core + common provide ports & domain logic.
dependencies = [
    # NOTE: Distribution names can differ from import module names.
    # common: distribution 'drl-trading-common' => import package 'drl_trading_common'
    "drl-trading-common",   # Shared models & config (domain DTOs, config schemas)
    # core: distribution & import both use underscores for package
    "drl_trading_core",     # Core ports & domain services (ports implemented here)
    # External libs required only by adapter layer (ideally removed from core over time)
    "feast",                # Feature store framework (should be isolated to adapter)
    "protobuf>=5.26.0,<6.0.0",  # Feast compatibility
    "pandas>=2.0.0",        # DataFrame ops for repositories
    "numpy>=1.24.0",        # Numeric support (alignment w/ core)
    "boto3>=1.38.30",       # S3 offline repo
    "injector>=0.22.0",     # DI framework
    "PyYAML>=6.0",          # Config consistency
    "python-dotenv>=1.1.1", # Env management
]

[tool.uv.sources]
drl-trading-common = { workspace = true }
drl_trading_core = { workspace = true }

[project.optional-dependencies]
testing = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]
dev = ["mypy>=1.8.0", "ruff>=0.1.0", "ipython>=8.0.0"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]
dev-full = [
    # Dev
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    # Test
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    # ML/runtime alignment
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[tool.ruff.lint.isort]
known-first-party = ["drl_trading_adapter", "drl_trading_core", "drl_trading_common"]

[tool.coverage.run]
source = ["drl_trading_adapter"]
branch = true
omit = ["*/tests/*", "*/setup.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]

[project.scripts]
# (Intentionally no executable entry points yet)
