# DRL Trading Common Package Configuration
# This package inherits shared tool configurations from workspace pyproject.toml

[build-system]
# Hatchling - fast, modern build backend for large packages
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-trading-common"
version = "0.1.0"
description = "Common shared library for DRL Trading System - messaging, utilities, and interfaces"
readme = "README.md"
license = "MIT"
authors = [
    {name = "sonntagnico", email = "nico-tor@hotmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.12"

# Common shared dependencies
dependencies = [
    "gymnasium>=0.29.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
production = [
    "pika>=1.3.0",  # RabbitMQ client
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

# Project-specific ruff configuration (overrides workspace defaults where needed)
[tool.ruff.lint.isort]
known-first-party = ["drl_trading_common"]

# Project-specific coverage configuration
[tool.coverage.run]
source = ["drl_trading_common"]
branch = true
omit = [
    "*/tests/*",
    "*/setup.py",
]

# Project-specific pytest configuration (extends workspace defaults)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-markers"
    # Uncomment for coverage reporting:
    # "--cov=drl_trading_common",
    # "--cov-report=term-missing"
]
