## DRL Trading Common Package Configuration (Unified Structure)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-trading-common"
version = "0.1.0"
description = "Common shared library for DRL Trading System - messaging, utilities, and interfaces"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "sonntagnico", email = "nico-tor@hotmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Runtime dependencies ONLY
dependencies = [
    "gymnasium>=0.29.0",            # Environment interface
    "pandas>=2.0.0",                # Data structures
    "pydantic>=2.0.0",              # Validation & config models
    "typing-extensions>=4.0.0",     # Forward compat types
    "psycopg2-binary>=2.9.10",      # PostgreSQL access
    "confluent-kafka>=2.3.0",       # Messaging infrastructure
    "PyYAML>=6.0",                  # YAML config parsing
    "injector>=0.22.0",             # DI framework
    "python-dotenv>=1.1.1",         # .env support
    "flask>=3.0.0",                 # Lightweight web (health endpoints)
    "psutil>=5.9.0",                # System metrics
]

## Optional extras (minimal; prefer dependency groups)
[project.optional-dependencies]
testing = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]
dev = ["mypy>=1.8.0", "ruff>=0.1.0", "ipython>=8.0.0"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]
dev-full = [
    # Dev
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    # Test
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    # ML runtime alignment for local experimentation
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gymnasium>=0.29.0",
]

[tool.ruff.lint.isort]
known-first-party = ["drl_trading_common"]

[tool.coverage.run]
source = ["drl_trading_common"]
branch = true
omit = ["*/tests/*", "*/setup.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-ra", "--strict-markers"]
# Uncomment for coverage locally:
# addopts = ["-ra", "--strict-markers", "--cov=drl_trading_common", "--cov-report=term-missing"]
