# DRL Trading Core Package Configuration
# This package inherits shared tool configurations from workspace pyproject.toml

[build-system]
# Hatchling - fast, modern build backend for large packages
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project metadata
[project]
name = "drl_trading_core"
version = "0.1.0"
description = "AI-powered trading system with reinforcement learning capabilities"
authors = [
    {name = "sonntagnico", email = "nico-tor@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Core package dependencies - ONLY runtime dependencies needed for deployment
dependencies = [
    # Workspace dependencies
    "drl-trading-common",
    # Core ML and data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pandas_ta",
    "stable_baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "yfinance",
    # Feature storage and management
    "feast",
    "protobuf>=5.26.0,<6.0.0", # Pin protobuf to compatible version with feast
    # API and services
    "click",
    # Dependency injection framework
    "injector>=0.22.0",
    "boto3>=1.38.30",
    # Configuration support - required by drl-trading-common
    "PyYAML>=6.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
drl-trading-common = { workspace = true }

# Project-specific ruff configuration (overrides workspace defaults where needed)
[tool.ruff.lint.isort]
known-first-party = ["drl_trading_core", "drl_trading_common"]

# Project-specific coverage configuration
[tool.coverage.run]
source = ["drl_trading_core"]
branch = true
omit = [
    "*/tests/*",
    "*/setup.py",
]

# Project-specific pytest configuration (extends workspace defaults)
[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-m not slow",
    "--strict-markers"
    # Uncomment for coverage reporting:
    # "--cov=drl_trading_core",
    # "--cov-report=term-missing"
]

# Dependency groups (following workspace standards)
[dependency-groups]
# Testing dependencies (following workspace standards)
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "moto[s3]>=5.1.9",
    "testcontainers>=4.10.0",
    "minio>=7.0.0",  # Required for testcontainers MinIO support
]
# Development dependencies (following workspace standards)
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "pandas-stubs",  # Type stubs for development
]
dev-full = [
    # Development dependencies
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "pandas-stubs",
    # Testing dependencies
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "moto[s3]>=5.1.9",
    "testcontainers>=4.10.0",
    "minio>=7.0.0",
    # ML dependencies for core processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gymnasium>=0.29.0",
]

[project.scripts]
add-feature = "drl_trading_core.scripts.add_feature:main"
