## DRL Trading Core Package Configuration (Unified Structure)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-trading-core"
version = "0.1.0"
description = "AI-powered trading system with reinforcement learning capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "sonntagnico", email = "nico-tor@hotmail.com" },
]

# Runtime dependencies ONLY (avoid pulling test/dev tooling)
dependencies = [
    "drl-trading-common", # Workspace shared library
    # Data & ML stack
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "stable_baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "yfinance", # Market data source (lightweight)
    "protobuf>=5.26.0,<6.0.0", # Keep protobuf for shared message/model use
    "injector>=0.22.0",
    "boto3>=1.38.30",
    "PyYAML>=6.0",
    "python-dotenv>=1.1.1",
    "dask>=2025.7.0",
]

[tool.uv.sources]
drl-trading-common = { workspace = true }

## Optional extras (keep slim; prefer dependency-groups for contributors)
[project.optional-dependencies]
testing = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]
dev = ["mypy>=1.8.0", "ruff>=0.1.0", "ipython>=8.0.0"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "moto[s3]>=5.1.9",
    "testcontainers>=4.10.0",
    "minio>=7.0.0",
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "pandas-stubs",
]
dev-full = [
    # Dev
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "pandas-stubs",
    # Test
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "moto[s3]>=5.1.9",
    "testcontainers>=4.10.0",
    "minio>=7.0.0",
    # ML runtime alignment
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gymnasium>=0.29.0",
]

[tool.ruff.lint.isort]
known-first-party = ["drl_trading_core", "drl_trading_common"]

[tool.coverage.run]
source = ["drl_trading_core"]
branch = true
omit = ["*/tests/*", "*/setup.py"]

[tool.pytest.ini_options]
addopts = ["-ra", "-m not slow", "--strict-markers"]
# Uncomment to enable coverage locally:
# addopts = ["-ra", "-m not slow", "--strict-markers", "--cov=drl_trading_core", "--cov-report=term-missing"]

#[tool.hatch.build.targets.wheel]
#packages = ["src"]

[project.scripts]
add-feature = "drl_trading_core.scripts.add_feature:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drl_trading_core"]
