# DRL Trading Execution Package Configuration
# This package inherits shared tool configurations from workspace pyproject.toml

[build-system]
# Hatchling - fast, modern build backend for large packages
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-trading-execution"
version = "0.1.0"
description = "Trade execution service for AI-powered trading system"
authors = [
    {name = "sonntagnico", email = "nico-tor@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Execution service specific dependencies
dependencies = [
    # Workspace dependencies
    "drl-trading-common",  # Provides confluent-kafka
    # Core data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # Database connectivity
    "psycopg2-binary>=2.9.10",
    # External API communication
    "requests>=2.31.0",
    # Dependency injection
    "injector>=0.22.0",
    # Configuration support - required by drl-trading-common
    "PyYAML>=6.0",
]

[tool.uv.sources]
drl-trading-common = { workspace = true }

[dependency-groups]
# Testing dependencies (following workspace standards)
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
]
# Development dependencies (following workspace standards)
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]
dev-full = [
    # Development dependencies
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    # Testing dependencies
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    # Core dependencies for execution processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drl_trading_execution"]

# Project-specific ruff configuration (overrides workspace defaults where needed)
[tool.ruff.lint.isort]
known-first-party = ["drl_trading_execution", "drl_trading_common"]

# Project-specific coverage configuration
[tool.coverage.run]
source = ["drl_trading_execution"]
branch = true
omit = [
    "*/tests/*",
    "*/setup.py",
]
