# DRL Trading Ingest Package Configuration
# This package inherits shared tool configurations from workspace pyproject.toml

[build-system]
# Hatchling - fast, modern build backend for large packages
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl-trading-ingest"
version = "0.1.0"
description = "Data ingestion service for AI-powered trading system with support for multiple data sources and real-time streaming"
authors = [
    {name = "sonntagnico", email = "nico-tor@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Ingest service specific dependencies
dependencies = [
    # Workspace dependencies
    "drl-trading-common", # Provides confluent-kafka
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Market data sources
    "yfinance>=0.2.0",
    "alpha_vantage>=2.3.0",
    # Database connectivity
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.0",
    # Data quality and validation
    "pydantic>=2.0.0",
    # Database migrations
    "alembic>=1.12.0",
    # Dependency injection
    "injector>=0.22.0",
    "flask>=3.1.1",
    # Configuration support - required by drl-trading-common
    "PyYAML>=6.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
drl-trading-common = { workspace = true }

# Project-specific dependency groups
# Note: These follow the workspace dependency standards for consistency
[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "testcontainers>=4.0.0",  # For database testing
]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]
dev-full = [
    # Development dependencies
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    # Testing dependencies
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "testcontainers>=4.0.0",
    # ML dependencies (for ingest processing)
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # Configuration support - required by drl-trading-common
    "PyYAML>=6.0",
]

# Package discovery configuration
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# Project-specific ruff configuration (overrides workspace defaults where needed)
[tool.ruff.lint.isort]
known-first-party = ["drl_trading_ingest", "drl_trading_common"]

# Project-specific coverage configuration
[tool.coverage.run]
source = ["drl_trading_ingest"]
branch = true
omit = [
    "*/tests/*",
    "*/setup.py",
    "*/migrations/*",  # Exclude alembic migrations
]
